# Cosmic-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.ko.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py  main.py
app/agent/: __init__.py  cgi_background.py  llm_provider.py  mcp_tooling.py  messages.py  retry.py  runtime.py  service.py
app/agent/tests/: test_cgi_background.py  test_llm_provider.py  test_mcp_orchestration.py  test_runtime.py  test_service.py
app/api/: __init__.py  application.py  cgi.py  chat.py  compat.py  dashboard.py  dependencies.py  jobs.py  schemas.py  security.py  settings.py  sse.py  usage.py
app/api/tests/: test_cgi_api.py  test_chat_stream.py  test_jobs_api.py  test_phase55_compat_api.py  test_security.py  test_settings_api.py
app/auth/: __init__.py  codex_client.py
app/config/: __init__.py  manager.py  migrations.py  secrets.py  settings.py  store.py
app/config/tests/: test_manager.py  test_settings.py
app/core/: __init__.py  cgi_schema.py  chat_history_store.py  mcp_client.py  memory_store.py  usage_store.py
app/core/tests/: test_cgi_memory.py  test_chat_history_store.py  test_mcp_client.py  (+2 more)
app/interfaces/: __init__.py  __main__.py  base.py  cli.py  telegram.py  wiring.py
dashboard/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  ChatPanel.tsx  DashboardPanel.tsx  GraphView.tsx  api.ts  sessionId.ts  styles.css  types.ts
deploy/systemd/: cosmic-agent-telegram.service
(+2 files in other folders)
