[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-agent"
version = "0.1.0"
description = "Multi-provider AI agent with CGI memory and streaming interfaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.40.0",
  "cryptography>=42.0.0",
  "fastapi>=0.104.0",
  "google-genai>=1.0.0",
  "networkx>=3.0",
  "numpy>=1.24.0",
  "openai>=1.0.0",
  "openai-codex>=0.1.0b0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "python-telegram-bot>=21.6",
  "rich>=13.7.0",
  "uvicorn[standard]>=0.24.0",
]

[project.scripts]
cosmic-agent = "app.interfaces.cli:main"
cosmic-agent-telegram = "app.interfaces.telegram:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
exclude = [
  "app.*.tests",
  "app.*.tests.*",
]
include = ["app*"]
where = ["."]

[tool.pytest.ini_options]
testpaths = [
  "app/agent/tests",
  "app/api/tests",
  "app/config/tests",
  "app/core/tests",
  "app/interfaces/tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
